envoy_external/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9000

node:
  cluster: service_greeter
  id: test-id

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 443 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "hello from envoy"     
          http_filters:
          - name: envoy.filters.http.jwt_authn
            config:
              providers:
                google-jwt:
                  issuer: https://cloud.google.com/iap
                  audiences:
                  - IAP_AUDIENCE
                  forward: true
                  remote_jwks:
                    http_uri:
                      uri: https://www.gstatic.com/iap/verify/public_key-jwk
                      cluster: jwt.www.googleapis.com|443
                      timeout:
                        seconds: 5                     
                  from_headers:
                  - name: X-Goog-Iap-Jwt-Assertion
              rules:
              - match:
                  prefix: "/"
                requires:
                  provider_name: "google-jwt"
          - name: envoy.router
            config: {}
      tls_context:
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: "/certs/server_neg_crt.pem"
            private_key:
              filename: "/certs/server_neg_key.pem"
  clusters:   
  - name: jwt.www.googleapis.com|443
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY    
    connect_timeout: 2s
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: www.googleapis.com
        port_value: 443
    tls_context: { sni: www.google.com }
